# shhtarknet

./: LICENSE  README.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/endpoints/: mod.rs
backend/src/secrets/: mod.rs  tests.rs
backend/src/starknet/: mod.rs  tests.rs
example/src/: main.cairo
example/tests/: test_main.cairo
frontend/: package-lock.json  package.json
frontend/src/: app.html
frontend/src/routes/: +page.svelte
frontend/static/: pico.min.css
