[package]
name = "shhtarknet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs",rev = "447182a90839a3e4f096a01afe75ef474186d911" }
tokio = { version = "1.25.0", features = ["macros"] }
